src/app/landing-page/sections/f-contact/contact-form/contact-form.component.scss
@import "../../../../../styles.scss";

@keyframes buttonSlide {
  0% {
    transform: translateX(calc(100% + 3rem));
  }

  100% {
    transform: translateX(calc(-100% - 3rem));
  }
}

@keyframes rotateIn {
  0% {
    transform: rotateY(0);
    opacity: 1;
  }
  100% {
    transform: rotateY(90deg);
    opacity: 0;
  }
}

@keyframes rotateOut {
  0% {
    transform: rotateY(-90deg);
    opacity: 0;
  }
  100% {
    transform: rotateY(0);
    opacity: 1;
  }
}

.formContainer {
  display: flex;
  flex-direction: column;

  &:first-child {
    border-top: 2px solid $color-highLight;
  }

  .inputBox {
    width: 100%;
    display: flex;
    flex-direction: column;
    border-bottom: 2px solid $color-highLight;
    padding-bottom: 2rem;
    padding: 2rem 2rem calc(2rem - 1px) 2rem;

    label {
      font-family: "Fira", monospace;
      font-weight: 500;
      font-size: 1.5rem;
      color: $color-highLight;
      padding-bottom: 1rem;
    }

    input {
      background-color: transparent;
      border: none;
      border-bottom: 1px solid transparent;
      outline: none;
      font-family: "Karla", sans-serif;
      font-weight: 400;
      font-size: 1.13rem;
      color: white;
      transition: all 0.2s ease-in-out;

      &:-webkit-autofill {
        background-color: transparent !important;
        box-shadow: 0 0 0px 1000px $color-bgDark inset !important;
        color: white;
        -webkit-text-fill-color: white;
        border: none !important;
      }

      &::placeholder {
        font-family: "Karla", sans-serif;
        font-weight: 400;
        font-size: 1.13rem;
        color: white;
      }
    }

    textarea {
      background-color: transparent;
      border: none;
      // height: 1.13rem;
      line-height: 1.35rem;
      max-height: 128px;
      resize: none;
      outline: none;
      font-family: "Karla", sans-serif;
      font-weight: 400;
      font-size: 1.13rem;
      color: white;
      transition: all 0.2s ease-in-out;

      &::placeholder {
        font-family: "Karla", sans-serif;
        font-weight: 400;
        font-size: 1.13rem;
        color: white;
      }
    }

    .validationWarning {
      color: $color-red !important;
    }
  }

  #messageBox {
    padding: 2rem 2rem 2rem 2rem;
  }

  .privacyPolicyBox {
    display: flex;
    flex-direction: column;
    padding-top: 2.5rem;
    padding-bottom: calc(2.5rem - 25px);

    

    div {
      display: flex;
      align-items: center;
      line-height: 1.5rem;

      @media (max-width: 1000px ) {
        flex-wrap: wrap;
      }

      .checkBox {
        margin-right: 0.75rem;
        cursor: pointer;
        width: 18px;
        height: 18px;
        border: 2px solid $color-highLight;
        border-radius: 4px;
        display: flex;
        justify-content: center;
        align-items: center;

        svg {
          transition: all 0.2s ease-in-out;
          stroke: $color-highLight;
          opacity: 0;
        }

        .opacity_1 {
          opacity: 1;
        }
      }

      p {
        font-family: "Karla", sans-serif;
        font-size: 0.93rem;
        color: white;
        text-wrap: nowrap;
      }

      a {
        font-family: "Karla", sans-serif;
        font-size: 0.93rem;
        color: $color-highLight;
        text-decoration: none;
        letter-spacing: 1px;
        padding: 0 0.25rem;
        transition: all 0.2s ease-in-out;
        text-wrap: nowrap;

        &:hover {
          text-decoration: underline;
        }
      }
    }

    .checkboxValidationField {
      font-family: "Karla", sans-serif;
      font-size: 0.93rem;
      color: $color-red;
      padding-top: 0.5rem;
      line-height: 1rem;
    }
  }

  .buttonBox {
    display: flex;
    flex-direction: row;
    justify-content: center;

    button {
      background-color: transparent;
      border: 2px solid white;
      padding: 0.75rem 1.5rem;
      border-radius: 100vh;
      cursor: pointer;
      transition: all 0.2s ease-in-out;
      text-decoration: none;
      color: white;
      font-family: "Karla", sans-serif;
      font-size: 1.13rem;
      position: relative;
      display: inline-block;
      overflow: hidden;

      span {
        position: relative;
        transition: all 0.2s ease-in;
      }
    }

    .hoverValid {
      &:hover {
        border: 2px solid $color-highLight;

        span {
          transition: all 1s ease-in;
          display: inline-block;
          transform: translateX(calc(-100% - 3rem));
          animation: buttonSlide 2s linear infinite;
          animation-direction: normal;
          animation-delay: 1s;
          color: $color-highLight;
        }
      }
    }

    .hoverInvalid {
      &:hover {
        border: 2px solid $color-red;

        span {
          display: inline-block;
          
          color: $color-red;
        }
      }
    }

    .rotateOut {
      animation: rotateOut 0.4s ease-out forwards;
      border: 2px solid $color-highLight;
      color: $color-highLight;
    }
    
    .rotateIn {
      animation: rotateIn 0.4s ease-In forwards;
      border: 2px solid $color-highLight;
      color: $color-highLight;
    }
  }
}

